fix: the spacing between the button and swap box (#137)

--- a/src/renderer/routes/Swap/index.module.less
+++ b/src/renderer/routes/Swap/index.module.less
@@ -49,6 +49,7 @@
       display: flex;
       flex-direction: column;
       gap: 8px;
+      margin-bottom: 30px;
 
       .p1 {
         text-align: left;
@@ -104,7 +105,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-block: 30px;
+    margin-bottom: 30px;
   }
 
   .alert {
